  =natural_gradient_a_pinv= for high/mid-level API in =gm_run= to use direct pseudo inverse to calculate natural
  gradient.
*** Changed
+ *TAT.py*: =sqrt= will calculate the square root of absoluate value in tensor elementwisely, instead of square root of
  value itself and return =nan= for negative number.
*** Deprecated
+ *tetragono*: =natural_gradient= for observer object is deprecated, users should specify the method to calculate
  natural gradient explicitly, which are =natural_gradient_by_direct_pseudo_inverse= and
  =natural_gradient_by_conjugate_gradient=.
*** Removed
*** Fixed

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.0...v0.3.1][v0.3.1]] - 2023-02-21

*** Added
+ *TAT.py*: Add binding for functions of Edge introduced in v0.3.0 such as =point_by_index=.
*** Changed
+ *TAT.py*: Update the function arguments names to keep the same with those in c++ side.
+ *TAT.py*: Remove navigator of TAT.py to get tensor type directly, please use module alias instead. For example,
  previous code such as `TAT("No", np.float64)` should be updated to `TAT.Normal.float64.Tensor`.
*** Removed
+ *TAT.py*: Remove optional FastName binding, which is useless in python side in fact.

** [[https://github.com/USTC-TNS/TAT/compare/v0.2.23...v0.3.0][v0.3.0]] - 2022-11-15

*** Added
+ *tetragono*: Tetragono will print backtrace of the current process when receiving SIGUSR1.
+ *tetragono*: Add squash support for sampling lattice.
*** Changed
+ *TAT.hpp*: Use the multidimension span to record blocks in tensor, instead of the previous map data structure, some
  related API is also updated. Detail update is followed:
  + About data
    + Tensor blocks is stored in a new order other than old version, the previous use a map from symmetry list to data
      block, which follows the lexicographical order of symmetry list. The new order follows the lexicographical order