@@ -10,6 +10,8 @@
 *** Changed
 + *TAT.py*: =sqrt= will calculate the square root of absoluate value in tensor elementwisely, instead of square root of
   value itself and return =nan= for negative number.
++ *tetraku*: Add Hamiltonian to another part of density matrix for density matrix of Heisenberg/Hubbard/tJ model. It is
+  to ensure the result density is unitary despite of errors introduced by contract and approximation.
 *** Deprecated
 + *tetragono*: =natural_gradient= for observer object is deprecated, users should specify the method to calculate
   natural gradient explicitly, which are =natural_gradient_by_direct_pseudo_inverse= and
